[package]
name = "bevy_roguelike"
version = "0.4.0"
edition = "2021"

[dependencies]
bevy = {path="../bevy", version = "0.8.0-dev", default-features = false, features = ["png", "bevy_winit", "bevy_render"]}
bevy_ascii_terminal = {path="../bevy_ascii_terminal", version = "0.11" }
sark_grids = {path="../sark_grids_rs", version = "0.5" }
sark_pathfinding = {path="../sark_pathfinding_rs", version="0.2" }
adam_fov_rs = {path="../adam_fov_rs", version = "0.2" }
rand = "0.8.4"
ron = "0.7"
serde = "1.0.117"
bracket-random = "0.8.2"
interpolation = "0.2.0"

[profile.release]
opt-level = 's'
lto = true